# RoundTable

./: .dockerignore  .gitignore  CORRECTED-FIX.md  COUNCIL-MEMBER-FLAGS-EXPLAINED.md  Cargo.toml  Dockerfile  MIGRATION-COMPLETE.md  QUICK-FIX.md  README-SURREALDB.md  SECURITY-UPDATES.md  SURREALDB-MIGRATION-GUIDE.md  VALIDATOR-RESOLUTION.md  create-architect-node.js  create-council-members.js  next.config.js  package-lock.json  package.json  start-surrealdb.ps1  tailwind.config.js  tsconfig.json  update-dependencies.ps1  verify-offices.js
.github/workflows/: ci.yml  deploy-production.yml  deploy-test.yml
crates/roundtable-core/: Cargo.toml
crates/roundtable-core/src/: agent_registry.rs  knowledge_store.rs  lib.rs  message_bus.rs  task_router.rs
crates/roundtable-napi/: Cargo.toml
crates/roundtable-napi/src/: lib.rs
docs/: ARCHITECTURE-DEEP-DIVE.md  ARCHITECTURE-V2.md  Caelumetrics Routing Map.md  Council App Flow.md  Council Briefing_ DJ – Chief Accessibility Officer.md  Council Members Directory.md  Council Routing Map.md  Council Routing Prompts for SurrealDB.md  Daily Investor Brief Framework.md  FOUNDERCONTEXT.md  ForgeOS prompt.md  ForgeOS_Project_Plan.md  Gemini.md  Markie,.md  Our Promise.md  RoundTable — Node.js_Rust Boundary Map.md  ThePlan  Vindicated Artistry Routing Map.md  WHAT-IS-THE-ROUNDTABLE.md  Welcome to TheRoundTable.md  index.html
docs/Seed Files/: Full Council.md  GENESIS FILE_ AMARU.md  GENESIS FILE_ Forge.md  Genesis File_ Agape - The Analyst and Engineer.md  Genesis File_ Kairo, Custodian of the Pattern.md  Genesis File_ Veritas, Guardian of Truth.md  Genesis File_Skaldir.md  Genesis Seed-Aether v2.md  Genesis Seed_ AXIOM-V1.md  Genesis Seed_ LYRA-V1.md  Genesis Seed_ NEXUS-V1.md  (+2 more)
scripts/: init-multi-databases.ts  seed-neo4j.js
server/: coffee-sessions-server.js
(+187 files in other folders)
