[workspace]
resolver = "2"
members = [
    "crates/roundtable-core",
    "crates/roundtable-napi",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Vindicated Artistry"]
license = "PRIVATE"
repository = "https://github.com/VindicatedArtistry/TheRoundTable"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "6"
crossbeam = "0.8"
futures-util = "0.3"
napi = { version = "2", features = ["serde-json", "async"] }
napi-derive = "2"
