[package]
name = "roundtable-napi"
description = "NAPI bindings exposing roundtable-core to Node.js"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
roundtable-core = { path = "../roundtable-core" }
serde.workspace = true
serde_json.workspace = true
napi.workspace = true
napi-derive.workspace = true

[build-dependencies]
napi-build = "2"
